--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
               <!-- logo -->
               <a class="navbar-brand pl-0" href="index.html"
                 ><img
-                  src="assets/custom/images/logo-noir-min.gif"
-                  alt="Fables Template"
+                  src="assets/custom/images/logo-PulseXpert-min.jpg"
+                  alt="PulseXpert Media - Digital Agency"
                   class="-logo"
               /></a>
               <!-- End Logo -->
@@ -399,7 +399,7 @@
             </p>
           </div>
           <a
-            href="#"
+            href="services.html"
             class="btn fables-second-background-color white-color white-color-hover py-2 px-4 my-2 rounded-0 font-18"
             >Learn More</a
           >
@@ -512,7 +512,7 @@
               for your success!
             </p>
             <a
-              href="contactus1.html"
+              href="contactus3.html"
               class="btn fables-second-background-color white-color white-color-hover fables-btn-rounded mt-4 py-2 px-5 position-relative z-index"
               >Contact us</a
             >
@@ -523,7 +523,7 @@
     <!-- Start Overlay Caption -->
 
     <!-- Start Team -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="fables-team overflow-hidden">
         <h2
           class="font-35 font-weight-bold text-center fables-main-text-color my-4 my-lg-5"
@@ -724,7 +724,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Team -->
 
     <!-- Start Latest Blog -->
